--- a/fancy_menus/src/index.css
+++ b/fancy_menus/src/index.css
@@ -2,4 +2,18 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: green;
+}
+
+
+div.menus-square {
+  width: 250px;
+  height: 250px;
+  background-color: red;
+}
+
+#khaleda{
+  background-color: red;
+  width: 250px;
+  height: 250px;
 }
